<resources>
    <string name="app_name">Podcas-T</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openMediaPlayerButton">Open Media Player</string>
    <string name="openTwitterFeedButton">Open Twitter Feed</string>
    <string name="openJabberChatButton">Open Jabber Chat</string>
    <string name="defaultUrl">http://217.20.164.163:8006/</string>
    <string name="playStopButton">Play / Stop</string>
    <string name="title_activity_act_player">ActPlayer</string>
    <string name="title_activity_act_twitter">ActTwitter</string>
    <string name="title_activity_act_jabber">ActJabber</string>
    <string name="edit_blank">blank</string>
</resources>
